fix: page overflow behavior

--- a/react-shop/src/index.scss
+++ b/react-shop/src/index.scss
@@ -23,6 +23,10 @@ code {
     monospace;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 html,
 body,
 div,
